--- a/report.tex
+++ b/report.tex
@@ -162,6 +162,7 @@
 
 \section{Περίληψη}
 
+ 
  Η συγκεκριμένη βάση δεδομένων μοντελοποιεί μια εφαρμογή διαχείρισης σταθμών επαναφόρτισης 
  ηλεκτρικών αυτοκινήτων. Πιο συγκεκριμένα, παρέχει πολλές υπηρεσίες στον χρήστη της εφαρμογής, 
  ο οποίος αφού δημιουργήσει έναν λογαριασμό, έχει την δυνατότητα να εισάγει στην βάση 
@@ -174,6 +175,7 @@
  τα ραντεβού του, αλλά και τις τραπεζικές κάρτες του.
  
 \section{Μεθοδολογία}
+
  
  Για την δημιουργία της βάσης δεδομένων πρώτο βήμα αποτέλεσε η κατασκευή του μικρόκοσμου, 
  ο οποίος περιγράφει τις λειτουργίες που η βάση καλείται να υλοποιεί, καθιστώντας τον 
@@ -268,8 +270,9 @@
 συνδεδεμένη με μια πληρωμή, καθώς κάθε ραντεβού, όταν φτάσει η αποθηκευμένη μέρα και ώρα 
 «μετατρέπεται» σε φόρτιση, ενώ μετά από κάθε φόρτιση ακολουθεί η πληρωμή. Επιπλέον, σε περίπτωση 
 που συμβεί φόρτιση έχοντας προηγηθεί ραντεβού, μια θέση φόρτισης κατοχυρώνεται για την μέρα και
-ώρα του ραντεβού, διαφορετικά η θέση φόρτισης κατοχυρώνεται εκείνη την ώρα.
+ώρα του ραντεβού, διαφορετικά η θέση φόρτισης κατοχυρώνεται την στιγμή της φόρτισης.
 
+\newpage
 Παρακάτω φαίνεται το διάγραμμα \en{erd}, το οποίο αναπαριστά τον μικρόκοσμο πλήρως:
 
 \begin{figure}[H]
@@ -279,7 +282,7 @@
 \end{figure}
 \newpage
 Μετά την δημιουργία του μικροκόσμου αλλά και την αναπαράστασή του μέσω του διαγράμματος
-οντοτήτων-συσχετίσεων, σειρά έχει η φημιουργία του σχεσιακού μοντέλου:
+οντοτήτων-συσχετίσεων, σειρά έχει η dημιουργία του σχεσιακού μοντέλου:
 
 \begin{figure}[H]
     \centering
@@ -291,17 +294,13 @@
 
 \section {Αξιολόγηση}
 
+
 Το συγκεριμένο πρόγραμμα δεν υλοποιεί τόσο καλά τα ραντεβού των ιδιοκτητών για φόρτιση των οχημάτων 
 τους καθώς δεν έχει υλοποιηθεί κάποια συνάρτηση για μετατροπή ενός μελλοντικού ραντεβού σε παροντική 
 φόρτιση, με αποτέλεσμα το πρόγραμμα να μην γνωρίζει ποια θέση φόρτισης είναι κατειλημμένη ανά πάσα στιγμή.
 
-Συμπερασματικά, η συγκεκριμένη εργασία αποτέλεσε μια αρκετά χρονοβόρο διαδικασία καθ'όλη την διάρκεια του εξαμήνου,
-ωστόσο η διαρκής ενασχόληση με αυτό το αντικείμενο είχε ως αποτέλεσμα την εξοικείωση μου μαζί του
-σε επίπεδα πέρα από κάθε προσδοκία στην αρχή του εξαμήνου. Το \en{project} αυτό έχει πολύ
-μεγάλη εξελιξιμότητα και πέραν του μαθήματος, παρόλα αυτά όμως νομίζω πως έχει ολοκληρωθεί σε έναν 
-αρκετά ικανοποιητικό βαθμό για τα τωρινά δεδομένα.
-
 \section {Δεδομένα}
+
 
 Για την περάτωση της εργασίας αυτής χρειάστηκε αρκετές φορές να συλλέξω δεδομένα, κυρίως για την 
 εισαγωγή στην βάση δεδομένων τυχαίων στοιχείων με την μορφή εγγραφών, με σκοπό την ύπαρξη λειτουργικότητας
@@ -317,7 +316,8 @@
 
 \section{Προγραμμα}
 
-Για την ανάπτυξη της εφαρμογής, έγινε χρήση της γλώσσας \en{python} , αλλά και της γλώσσας \en{sqlite} μέσω
+
+Για την ανάπτυξη της εφαρμογής, έγινε χρήση της γλώσσας \en{python}, αλλά και της γλώσσας \en{sqlite} μέσω
 της \en{python}, κάνοντας χρήση της εντολής \en{import sqlite3 as sql}.
 
 Όλος ο κώδικας είναι χωρσιμένος σε 4 μέρη:
@@ -352,6 +352,7 @@
 
 \section{Λειτουργία - Χρήση Προγράμματος}
 
+
 Στο \en{github} βρίσκονται στον ίδιο φάκελο όλα τα απαιτούμενα αρχεία για την ορθή λειτουργία του 
 προγράμματος. Πρώτα εκτελείται το: \en{db\_init.py} και στην συνέχεια το: \en{db\_fill.py}.
 Κατόπιν, εάν είναι επιθυμητή η πρόσβαση στο πρόγραμμα σαν χρήστης, γίνεται εκτέλεση του:
@@ -361,6 +362,13 @@
 Στο \en{db\_edit.py}, στον κάθε χρήστη (καινούργιο ή ήδη υπάρχοντα) έχει δωθεί ένα \en{id}, με το 
 οποίο μπορεί να βρει και να τροποποιήσει τα δεδομένα του εντός της βάσης, οπότε είναι σημαντική
 η απομνημόνευσή του.
+
+\section{Συμπεράσματα}
+
+
+Συμπερασματικά, η συγκεκριμένη εργασία αποτέλεσε μια αρκετά χρονοβόρο διαδικασία καθ'όλη την διάρκεια του εξαμήνου, ωστόσο η διαρκής ενασχόληση με αυτό το αντικείμενο είχε ως αποτέλεσμα την εξοικείωση μου μαζί του σε επίπεδα πέρα από κάθε προσδοκία στην αρχή του εξαμήνου. Το \en{project} αυτό έχει πολύ
+μεγάλη εξελιξιμότητα και πέραν του μαθήματος, παρόλα αυτά όμως νομίζω πως έχει ολοκληρωθεί σε έναν 
+αρκετά ικανοποιητικό βαθμό για τα τωρινά δεδομένα.
 
 \section{Βιβλιογραφία}
 
